--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+spring.application.name=UserService
+spring.devtools.restart.enabled=true
+eureka.client.service-url.defaultZone=http://localhost:9000/eureka
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3307}/libraryDb
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:cipherlab123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+management.endpoint.health.enabled=true
+management.endpoints.web.exposure.include=health, info
+server.port=0
 #spring.jpa.show-sql: true
